# inventory-system

./: .asset-template.json.hb  .buildinfo  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MIGRATION_SUMMARY.md  README.md  SConstruct  TESTING.md  VISUAL_COMPARISON.md  character_inventory_system_fixed.gd  demonstrate_fix.py  export_presets.cfg  fix_documentation.md  genindex.html  icon.png.import  icon.svg.import  index.html  inventory-system.gd  methods.py  objects.inv  plugin.cfg  project.godot  sdas.tres  search.html  searchindex.js  test_inventory_toggle_fix.gd  test_slot.gd  version.py
InventorySystem_C-Sharp_Wrappers/: Csharp_Test_Scene.tscn  InventorySystem_C-Sharp_Wrappers.csproj  README.md  TestCsharp.cs  icon.svg.import  project.godot
_sources/: index.rst.txt
api/: class_crafting.html  class_craftstation.html  class_craftstationtype.html  class_gridinventory.html  class_gridinventoryconstraint.html  class_hotbar.html  class_inventory.html  class_inventoryconstraint.html  class_inventorydatabase.html  class_itemcategory.html  class_itemdefinition.html  class_itemstack.html  class_loot.html  class_lootgenerator.html  class_lootitem.html  class_nodeinventories.html  class_quadnode.html  class_quadrect.html  class_quadtree.html  class_recipe.html  class_slot.html  index.html
base/: database.tres  default_actions.gd  kenney_input_icons.tres  setup_keys.gd
contributing/: cmake_support.html
core/: categorized_slot.gd  hand_item_3d.gd  hotbar.gd  inventory.gd  inventory_database.gd  inventory_handler.gd  inventory_item.gd  inventory_system.gd  inventory_system.tscn  node_inventory_system_base.gd  slot.gd
craft/: craft-station.gd  craft_station.gd  recipe.gd
doc_classes/: CategorizedSlot.xml  CraftStation.xml  CraftStationType.xml  Crafter.xml  Crafting.xml  GridInventory.xml  GridInventoryConstraint.xml  Hotbar.xml  InteractAction.xml  Interactor.xml  Inventory.xml  InventoryConstraint.xml  InventoryDatabase.xml  InventoryHandler.xml  Item.xml  ItemCategory.xml  ItemDefinition.xml  ItemStack.xml  Loot.xml  LootGenerator.xml  LootItem.xml  NodeInventories.xml  QuadRect.xml  QuadTree.xml  Recipe.xml  Slot.xml
docs/: build_docs.sh  index.rst  requirements.txt  versions.yml
editor/: constants.gd  inventory_editor.gd  inventory_editor.tscn  inventory_settings.gd  tab_container_inventory.gd.uid
extras/: character_inventory_system.gd  character_inventory_system.tscn  dropped_item_2d.gd  dropped_item_3d.gd  hand_item_3d.gd  hand_item_holder_2d.gd  networked_character_inventory_system.gd  networked_object_placer.gd  object_placer.gd  place_item_spawner.gd  placeable_hand_item_3d.gd
fps/: box_inventory.gd  box_inventory.tscn  campfire.gd  campfire.tscn  character_inventory_system.gd  fps_demo.gd  (+10 more)
(+4834 files in other folders)
